--- a/index.html
+++ b/index.html
@@ -6,9 +6,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>F8 Project 01</title>
         <link rel="stylesheet" href="./assets/css/reset.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,400&family=Sen:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>F8 02</h1>
+        <main style="height: 5000px">
+            <header class="header fixed">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- Logo -->
+                        <a href="#">
+                            <img
+                                src="./assets/img/logo.svg"
+                                alt="Lesson ."
+                                class="logo"
+                            />
+                        </a>
+                        <!-- Navigation -->
+                        <nav class="nav">
+                            <ul>
+                                <li class="active">
+                                    <a href="#!">Home</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Courses</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Pricing</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Reviews</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="actions">
+                            <a href="#!" class="btn sign-up-btn">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+        </main>
     </body>
 </html>
