--- a/index.html
+++ b/index.html
@@ -15,42 +15,42 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <main style="height: 5000px">
-            <!-- Header -->
-            <header class="header fixed">
-                <div class="main-content">
-                    <div class="body">
-                        <!-- Logo -->
-                        <a href="#">
-                            <img
-                                src="./assets/img/logo.svg"
-                                alt="Lesson ."
-                                class="logo"
-                            />
-                        </a>
-                        <!-- Navigation -->
-                        <nav class="nav">
-                            <ul>
-                                <li class="active">
-                                    <a href="#!">Home</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Courses</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Pricing</a>
-                                </li>
-                                <li>
-                                    <a href="#!">Reviews</a>
-                                </li>
-                            </ul>
-                        </nav>
-                        <div class="actions">
-                            <a href="#!" class="btn sign-up-btn">Sign Up</a>
-                        </div>
+        <!-- Header -->
+        <header class="header fixed">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <a href="#">
+                        <img
+                            src="./assets/img/logo.svg"
+                            alt="Lesson ."
+                            class="logo"
+                        />
+                    </a>
+                    <!-- Navigation -->
+                    <nav class="nav">
+                        <ul>
+                            <li class="active">
+                                <a href="#!">Home</a>
+                            </li>
+                            <li>
+                                <a href="#!">Courses</a>
+                            </li>
+                            <li>
+                                <a href="#!">Pricing</a>
+                            </li>
+                            <li>
+                                <a href="#!">Reviews</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="actions">
+                        <a href="#!" class="btn sign-up-btn">Sign Up</a>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
+        <main style="height: 5000px">
             <!-- Hero -->
             <div class="hero">
                 <div class="main-content">
@@ -411,7 +411,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Features -->
+            <!-- Features 1 -->
             <div class="features">
                 <div class="main-content">
                     <div class="body">
@@ -437,6 +437,109 @@
                             </p>
                             <p class="desc">Lesson Impact Report (2022)</p>
                             <a href="" class="btn cta-btn">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Features 2 -->
+            <div class="features features-2nd">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="images">
+                            <img
+                                src="./assets/img/features-3.jpg"
+                                alt="Take the next step toward your personal and
+                                professional goals with Lesson."
+                            />
+                        </div>
+                        <div class="content">
+                            <h2 class="heading lv2">
+                                Take the next step toward your personal and
+                                professional goals with Lesson.
+                            </h2>
+                            <p class="desc">
+                                Take the next step toward. Join now to receive
+                                personalized and more recommendations from the
+                                full Coursera catalog.
+                            </p>
+                            <a href="" class="btn cta-btn">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Blog -->
+            <div class="blog">
+                <div class="main-content">
+                    <div class="blog-top">
+                        <h2 class="heading lv2">Our blog</h2>
+                        <p class="desc">
+                            Read our regular travel blog and know the latest
+                            update of tour and travel
+                        </p>
+                    </div>
+                    <div class="blog-list">
+                        <!-- Blog Item 1 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-1.jpg"
+                                    alt="How to become a pro web designer in 2022 and get
+                                    remot job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+                        <!-- Blog Item 2 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-2.jpg"
+                                    alt="How to become a pro web designer in 2022 and get
+                                    remot job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
+                        </div>
+                        <!-- Blog Item 3 -->
+                        <div class="item">
+                            <a href="#!">
+                                <img
+                                    src="./assets/img/blog-3.jpg"
+                                    alt="How to become a pro web designer in 2022 and get
+                                    remot job?"
+                                    class="thumb"
+                                />
+                            </a>
+                            <div class="info">
+                                <span class="date">21 November 2021</span>
+                                <h3 class="title">
+                                    <a href="#!">
+                                        How to become a pro web designer in 2022
+                                        and get remot job?
+                                    </a>
+                                </h3>
+                                <a href="#!" class="btn">Read More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
